# coredns

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  plugin.cfg
core/: BUILD.bazel
core/dnsserver/: BUILD.bazel  zdirectives.go
core/plugin/: BUILD.bazel  zplugin.go
coremain/: BUILD.bazel
pb/: BUILD.bazel
plugin/: BUILD.bazel
plugin/acl/: BUILD.bazel
plugin/any/: BUILD.bazel
plugin/auto/: BUILD.bazel
plugin/autopath/: BUILD.bazel
plugin/azure/: BUILD.bazel
plugin/bind/: BUILD.bazel
plugin/bufsize/: BUILD.bazel
plugin/cache/: BUILD.bazel
plugin/cache/freq/: BUILD.bazel
plugin/cancel/: BUILD.bazel
plugin/chaos/: BUILD.bazel
plugin/clouddns/: BUILD.bazel
plugin/debug/: BUILD.bazel
plugin/deprecated/: BUILD.bazel
plugin/dnssec/: BUILD.bazel
plugin/dnstap/: BUILD.bazel
plugin/dnstap/dnstapio/: BUILD.bazel
plugin/dnstap/msg/: BUILD.bazel
plugin/dnstap/taprw/: BUILD.bazel
plugin/dnstap/test/: BUILD.bazel
plugin/erratic/: BUILD.bazel
plugin/errors/: BUILD.bazel
plugin/etcd/: BUILD.bazel
plugin/etcd/msg/: BUILD.bazel
plugin/file/: BUILD.bazel
plugin/file/rrutil/: BUILD.bazel
plugin/file/tree/: BUILD.bazel
plugin/forward/: BUILD.bazel
plugin/grpc/: BUILD.bazel
plugin/health/: BUILD.bazel
plugin/hosts/: BUILD.bazel
plugin/k8s_external/: BUILD.bazel
plugin/kubernetes/: BUILD.bazel
plugin/kubernetes/object/: BUILD.bazel
plugin/loadbalance/: BUILD.bazel
plugin/log/: BUILD.bazel
plugin/loop/: BUILD.bazel
plugin/metadata/: BUILD.bazel
plugin/metrics/: BUILD.bazel
plugin/metrics/vars/: BUILD.bazel
plugin/nsid/: BUILD.bazel
plugin/pkg/cache/: BUILD.bazel
plugin/pkg/dnstest/: BUILD.bazel
plugin/pkg/dnsutil/: BUILD.bazel
plugin/pkg/doh/: BUILD.bazel
plugin/pkg/edns/: BUILD.bazel
plugin/pkg/fall/: BUILD.bazel
plugin/pkg/fuzz/: BUILD.bazel
plugin/pkg/log/: BUILD.bazel
plugin/pkg/nonwriter/: BUILD.bazel
plugin/pkg/parse/: BUILD.bazel
plugin/pkg/rcode/: BUILD.bazel
plugin/pkg/replacer/: BUILD.bazel
plugin/pkg/response/: BUILD.bazel
plugin/pkg/reuseport/: BUILD.bazel
plugin/pkg/singleflight/: BUILD.bazel
plugin/pkg/tls/: BUILD.bazel
plugin/pkg/trace/: BUILD.bazel
plugin/pkg/transport/: BUILD.bazel
plugin/pkg/uniq/: BUILD.bazel
plugin/pkg/up/: BUILD.bazel
plugin/pkg/upstream/: BUILD.bazel
plugin/pprof/: BUILD.bazel
plugin/ready/: BUILD.bazel
plugin/reload/: BUILD.bazel
plugin/rewrite/: BUILD.bazel
plugin/root/: BUILD.bazel
plugin/route53/: BUILD.bazel
plugin/secondary/: BUILD.bazel
plugin/sign/: BUILD.bazel
plugin/template/: BUILD.bazel
plugin/test/: BUILD.bazel
plugin/tls/: BUILD.bazel
plugin/trace/: BUILD.bazel
plugin/transfer/: BUILD.bazel
plugin/whoami/: BUILD.bazel
request/: BUILD.bazel
test/: BUILD.bazel
