load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/coredns/coredns
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["coredns.go"],
    importpath = "github.com/coredns/coredns",
    visibility = ["//visibility:private"],
    deps = [
        "//core/plugin:go_default_library",
        "//coremain:go_default_library",
    ],
)

go_binary(
    name = "coredns",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
