load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "backend.go",
        "backend_lookup.go",
        "done.go",
        "normalize.go",
        "plugin.go",
        "register.go",
    ],
    importpath = "github.com/coredns/coredns/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/etcd/msg:go_default_library",
        "//plugin/pkg/dnsutil:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "log_test.go",
        "normalize_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//plugin/pkg/log:go_default_library"],
)
