load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zplugin.go"],
    importpath = "github.com/coredns/coredns/core/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/acl:go_default_library",
        "//plugin/any:go_default_library",
        "//plugin/auto:go_default_library",
        "//plugin/autopath:go_default_library",
        "//plugin/azure:go_default_library",
        "//plugin/bind:go_default_library",
        "//plugin/bufsize:go_default_library",
        "//plugin/cache:go_default_library",
        "//plugin/cancel:go_default_library",
        "//plugin/chaos:go_default_library",
        "//plugin/clouddns:go_default_library",
        "//plugin/debug:go_default_library",
        "//plugin/dnssec:go_default_library",
        "//plugin/dnstap:go_default_library",
        "//plugin/erratic:go_default_library",
        "//plugin/errors:go_default_library",
        "//plugin/etcd:go_default_library",
        "//plugin/file:go_default_library",
        "//plugin/forward:go_default_library",
        "//plugin/grpc:go_default_library",
        "//plugin/health:go_default_library",
        "//plugin/hosts:go_default_library",
        "//plugin/k8s_external:go_default_library",
        "//plugin/kubernetes:go_default_library",
        "//plugin/loadbalance:go_default_library",
        "//plugin/log:go_default_library",
        "//plugin/loop:go_default_library",
        "//plugin/metadata:go_default_library",
        "//plugin/metrics:go_default_library",
        "//plugin/nsid:go_default_library",
        "//plugin/pprof:go_default_library",
        "//plugin/ready:go_default_library",
        "//plugin/reload:go_default_library",
        "//plugin/rewrite:go_default_library",
        "//plugin/root:go_default_library",
        "//plugin/route53:go_default_library",
        "//plugin/secondary:go_default_library",
        "//plugin/sign:go_default_library",
        "//plugin/template:go_default_library",
        "//plugin/tls:go_default_library",
        "//plugin/trace:go_default_library",
        "//plugin/transfer:go_default_library",
        "//plugin/whoami:go_default_library",
        "@com_github_caddyserver_caddy//onevent:go_default_library",
        "@com_github_coredns_federation//:go_default_library",
    ],
)
