load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azure.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/azure",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/file:go_default_library",
        "//plugin/pkg/fall:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/pkg/upstream:go_default_library",
        "//request:go_default_library",
        "@com_github_azure_azure_sdk_for_go//profiles/latest/dns/mgmt/dns:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
        "@com_github_azure_go_autorest_autorest_azure_auth//:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "azure_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin/file:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/pkg/fall:go_default_library",
        "//plugin/test:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)
