load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["setup.go"],
    importpath = "github.com/coredns/coredns/plugin/deprecated",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
    ],
)
