load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "gocontext.go",
        "handler.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/dnstap",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/dnstap/dnstapio:go_default_library",
        "//plugin/dnstap/taprw:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_dnstap_golang_dnstap//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "context_test.go",
        "handler_test.go",
        "log_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin:go_default_library",
        "//plugin/dnstap/test:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/test:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_dnstap_golang_dnstap//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)
