load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "benchmark_test.go",
        "errors_test.go",
        "log_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/test:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)
