load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "etcd.go",
        "handler.go",
        "setup.go",
        "xfr.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/etcd",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/etcd/msg:go_default_library",
        "//plugin/pkg/fall:go_default_library",
        "//plugin/pkg/tls:go_default_library",
        "//plugin/pkg/upstream:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@io_etcd_go_etcd//clientv3:go_default_library",
        "@io_etcd_go_etcd//mvcc/mvccpb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["log_test.go"],
    embed = [":go_default_library"],
    deps = ["//plugin/pkg/log:go_default_library"],
)
