load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "closest.go",
        "dname.go",
        "example_org.go",
        "file.go",
        "lookup.go",
        "notify.go",
        "reload.go",
        "secondary.go",
        "setup.go",
        "shutdown.go",
        "wildcard.go",
        "xfr.go",
        "zone.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/file",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/file/rrutil:go_default_library",
        "//plugin/file/tree:go_default_library",
        "//plugin/pkg/dnsutil:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "//plugin/pkg/rcode:go_default_library",
        "//plugin/pkg/upstream:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "closest_test.go",
        "delegation_test.go",
        "delete_test.go",
        "dname_test.go",
        "dnssec_test.go",
        "dnssex_test.go",
        "ds_test.go",
        "ent_test.go",
        "file_test.go",
        "glue_test.go",
        "include_test.go",
        "log_test.go",
        "lookup_test.go",
        "nsec3_test.go",
        "reload_test.go",
        "secondary_test.go",
        "setup_test.go",
        "wildcard_test.go",
        "xfr_test.go",
        "zone_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin/file/tree:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/test:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)
