load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "connect.go",
        "dnstap.go",
        "forward.go",
        "health.go",
        "metrics.go",
        "persistent.go",
        "policy.go",
        "proxy.go",
        "setup.go",
        "type.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/forward",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/debug:go_default_library",
        "//plugin/dnstap:go_default_library",
        "//plugin/dnstap/msg:go_default_library",
        "//plugin/metrics:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "//plugin/pkg/tls:go_default_library",
        "//plugin/pkg/transport:go_default_library",
        "//plugin/pkg/up:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_dnstap_golang_dnstap//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dnstap_test.go",
        "health_test.go",
        "log_test.go",
        "persistent_test.go",
        "proxy_test.go",
        "setup_policy_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin/dnstap:go_default_library",
        "//plugin/dnstap/msg:go_default_library",
        "//plugin/dnstap/test:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/pkg/transport:go_default_library",
        "//plugin/test:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_dnstap_golang_dnstap//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)
