load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "grpc.go",
        "metrics.go",
        "policy.go",
        "proxy.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//pb:go_default_library",
        "//plugin:go_default_library",
        "//plugin/debug:go_default_library",
        "//plugin/metrics:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "//plugin/pkg/tls:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "grpc_test.go",
        "proxy_test.go",
        "setup_policy_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pb:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/test:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
