load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "health.go",
        "overloaded.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/health",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin:go_default_library",
        "//plugin/metrics:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "health_test.go",
        "log_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin/pkg/log:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
    ],
)
