load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apex.go",
        "external.go",
        "msg_to_dns.go",
        "setup.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/k8s_external",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/etcd/msg:go_default_library",
        "//plugin/pkg/dnsutil:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "apex_test.go",
        "external_test.go",
        "setup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin/kubernetes:go_default_library",
        "//plugin/kubernetes/object:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/test:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
    ],
)
