load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "autopath.go",
        "controller.go",
        "external.go",
        "handler.go",
        "kubernetes.go",
        "local.go",
        "metadata.go",
        "metrics.go",
        "namespace.go",
        "ns.go",
        "parse.go",
        "ready.go",
        "reverse.go",
        "setup.go",
        "watch.go",
        "xfr.go",
    ],
    importpath = "github.com/coredns/coredns/plugin/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//core/dnsserver:go_default_library",
        "//plugin:go_default_library",
        "//plugin/etcd/msg:go_default_library",
        "//plugin/kubernetes/object:go_default_library",
        "//plugin/metadata:go_default_library",
        "//plugin/metrics:go_default_library",
        "//plugin/pkg/dnsutil:go_default_library",
        "//plugin/pkg/fall:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/pkg/parse:go_default_library",
        "//plugin/pkg/upstream:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/oidc:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/openstack:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_client_go//tools/clientcmd/api:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "controller_test.go",
        "external_test.go",
        "handler_case_test.go",
        "handler_ignore_emptyservice_test.go",
        "handler_pod_disabled_test.go",
        "handler_pod_insecure_test.go",
        "handler_pod_verified_test.go",
        "handler_test.go",
        "kubernetes_apex_test.go",
        "kubernetes_test.go",
        "log_test.go",
        "metadata_test.go",
        "metrics_test.go",
        "namespace_test.go",
        "ns_test.go",
        "parse_test.go",
        "reverse_test.go",
        "setup_reverse_test.go",
        "setup_test.go",
        "setup_transfer_test.go",
        "setup_ttl_test.go",
        "xfr_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//plugin:go_default_library",
        "//plugin/etcd/msg:go_default_library",
        "//plugin/kubernetes/object:go_default_library",
        "//plugin/metadata:go_default_library",
        "//plugin/pkg/dnstest:go_default_library",
        "//plugin/pkg/fall:go_default_library",
        "//plugin/pkg/log:go_default_library",
        "//plugin/test:go_default_library",
        "//request:go_default_library",
        "@com_github_caddyserver_caddy//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
    ],
)
